refactor: insert header and nav element tag

--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
    <title>Document</title>
 </head>
 <body>
-   
+   <div id="page_container">
+      <header id="header"><div class="logo"></div><nav id="nav">div.NavBox*3</nav></header>
+   </div>
 </body>
 </html>
