refactor: add element tag

--- a/index.html
+++ b/index.html
@@ -8,7 +8,9 @@
 </head>
 <body>
    <div id="page_container">
-      <header id="header"><div class="logo"></div><nav id="nav">div.NavBox*3</nav></header>
+      <header id="header"><div class="logo"></div><nav id="nav"><div class="NavBox"></div>
+      <div class="NavBox"></div>
+      <div class="NavBox"></div></nav></header>
    </div>
 </body>
 </html>
