refactor: format code

--- a/index.html
+++ b/index.html
@@ -16,12 +16,17 @@
 		</title>
 
   <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
-  </style>
-</head>
-<body>
-   <div id="page_container">
+			.attribution {
+				font-size: 11px;
+				text-align: center;
+			}
+			.attribution a {
+				color: hsl(228, 45%, 44%);
+			}
+		</style>
+	</head>
+	<body>
+		<div id="page_container">
       <header id="header"><div class="logo"></div><nav id="nav"><div class="NavBox"></div>
       <div class="NavBox"></div>
       <div class="NavBox"></div></nav></header>
