refactor: format code

--- a/index.html
+++ b/index.html
@@ -29,7 +29,10 @@
 		<div id="page_container">
       <header id="header"><div class="logo"></div><nav id="nav"><div class="NavBox"></div>
       <div class="NavBox"></div>
-      <div class="NavBox"></div></nav></header>
-   </div>
-</body>
+					<div class="NavBox"></div>
+					<div class="NavBox"></div>
+				</nav>
+			</header>
+		</div>
+	</body>
 </html>
