refactor: format code

--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
+	<head>
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
@@ -12,10 +12,11 @@
 		/>
 
 		<title>
+         
 			Frontend Mentor | Fylo landing page with dark theme and features grid
 		</title>
 
-  <style>
+		<style>
 			.attribution {
 				font-size: 11px;
 				text-align: center;
@@ -27,8 +28,10 @@
 	</head>
 	<body>
 		<div id="page_container">
-      <header id="header"><div class="logo"></div><nav id="nav"><div class="NavBox"></div>
-      <div class="NavBox"></div>
+			<header id="header">
+				<div class="logo"></div>
+				<nav id="nav">
+					<div class="NavBox"></div>
 					<div class="NavBox"></div>
 					<div class="NavBox"></div>
 				</nav>
