refactor: format code

--- a/index.html
+++ b/index.html
@@ -36,6 +36,13 @@
 					<div class="NavBox"></div>
 				</nav>
 			</header>
+         <main id="main"><div class="MainBox"></div>
+         <div class="MainBox"></div>
+         <div class="MainBox"></div>
+         <div class="MainBox"></div>
+         <div class="MainBox"></div>
+         <div class="MainBox"></div></main>
+         
 		</div>
 	</body>
 </html>
