refactor: format code

--- a/index.html
+++ b/index.html
@@ -12,7 +12,6 @@
 		/>
 
 		<title>
-
 			Frontend Mentor | Fylo landing page with dark theme and features grid
 		</title>
 
@@ -36,13 +35,18 @@
 					<div class="NavBox"></div>
 				</nav>
 			</header>
-         <main id="main"><div class="MainBox"></div>
-         <div class="MainBox"></div>
-         <div class="MainBox"></div>
-         <div class="MainBox"></div>
-         <div class="MainBox"></div>
-         <div class="MainBox"></div></main>
-         
+			<main id="main">
+				<div class="MainBox"></div>
+				<div class="MainBox"></div>
+				<div class="MainBox"></div>
+				<div class="MainBox"></div>
+				<div class="MainBox"></div>
+				<div class="MainBox"></div>
+			</main>
+			<footer id="footer">
+				<div class="FooterBox"></div>
+				<div class="FooterBox"></div>
+			</footer>
 		</div>
 	</body>
 </html>
