refactor: link doc to index

--- a/index.html
+++ b/index.html
@@ -15,15 +15,8 @@
 			Frontend Mentor | Fylo landing page with dark theme and features grid
 		</title>
 
-		<style>
-			.attribution {
-				font-size: 11px;
-				text-align: center;
-			}
-			.attribution a {
-				color: hsl(228, 45%, 44%);
-			}
-		</style>
+		<script src="assets/scripts/app.js" defer></script>
+		<link type="text/css" rel="stylesheet" href="/assets/style/style.css" />
 	</head>
 	<body>
 		<div id="page_container">
