refactor: add image to code

--- a/index.html
+++ b/index.html
@@ -21,7 +21,9 @@
 	<body>
 		<div id="page_container">
 			<header id="header">
-				<div class="logo"></div>
+				<div class="logo">
+					<img src="./assets/images/logo.svg" alt="Fylo Logo" />
+				</div>
 				<nav id="nav">
 					<div class="NavBox"></div>
 					<div class="NavBox"></div>
