refactor: add nav bar text

--- a/index.html
+++ b/index.html
@@ -25,9 +25,9 @@
 					<img src="./assets/images/logo.svg" alt="Fylo Logo" />
 				</div>
 				<nav id="nav">
-					<div class="NavBox"></div>
-					<div class="NavBox"></div>
-					<div class="NavBox"></div>
+					<div class="NavBox"><p class="">Features</p></div>
+					<div class="NavBox"><p class="">Team</p></div>
+					<div class="NavBox"><p class="">Sign In</p></div>
 				</nav>
 			</header>
 			<main id="main">
