refactor: add element to index page

--- a/index.html
+++ b/index.html
@@ -39,8 +39,51 @@
 				<div class="MainBox"></div>
 			</main>
 			<footer id="footer">
-				<div class="FooterBox"></div>
-				<div class="FooterBox"></div>
+				<div class="FooterBox">
+					<img src="./assets/images/logo.svg" alt="" />
+				</div>
+				<div class="FooterBox">
+					<div class="">
+						<img src="./assets/images/icon-location.svg" alt="" />
+						<p class="">
+							Lorem ipsum dolor sit amet, consectetur adipiscing elit,
+							sed do eiusmod tempor incididunt ut labore et dolore magna
+							aliqua 6
+						</p>
+					</div>
+					<div class="">
+						<p class="">
+							<img
+								src="./assets/images/icon-phone.svg"
+								alt=""
+							/>+1-543-123-4567
+						</p>
+						<p class="">
+							<img src="./assets/images/icon-email.svg" alt="" />
+							example@fylo.com
+						</p>
+					</div>
+					<div class="">
+						<p class="">About Us</p>
+						<p class="">jobs</p>
+						<p class="">Press</p>
+						<p class="">Blog</p>
+					</div>
+					<div class="">
+						<p class="">Contact Us</p>
+						<p class="">Terms</p>
+						<p class="">Privacy</p>
+					</div>
+					<div class=""><img src="" alt=""><img src="" alt=""><img src="" alt=""></div>
+				</div>
+				<p class="attribution">
+					Challenge by
+					<a
+						href="https://www.frontendmentor.io?ref=challenge"
+						target="_blank"
+						>Frontend Mentor</a
+					>. Coded by <a href="#">Babboe1</a>.
+				</p>
 			</footer>
 		</div>
 	</body>
