refactor: add  element to index page

--- a/index.html
+++ b/index.html
@@ -31,12 +31,161 @@
 				</nav>
 			</header>
 			<main id="main">
-				<div class="MainBox"></div>
-				<div class="MainBox"></div>
-				<div class="MainBox"></div>
-				<div class="MainBox"></div>
-				<div class="MainBox"></div>
-				<div class="MainBox"></div>
+				<div class="MainBox">
+					<img src="./assets/images/illustration-intro.png" alt="" />
+				</div>
+				<div class="MainBox">
+					<h1 id="header_1">
+						All your files in one secure location, accessible anywhere
+					</h1>
+					<p class="">
+						Fylo stores all your most important files in one secure
+						location. Access them wherever you need, share and collaborate
+						with friends family, and co-workers.
+					</p>
+					<button class="">Get Started</button>
+				</div>
+				<div class="MainBox">
+					<div class="">
+						<div class="">
+							<div class="">
+								<img
+									src="./assets/images/icon-access-anywhere.svg"
+									alt=""
+								/>
+							</div>
+							<h2 class="">Access your files, anywhere</h2>
+							<p class="">
+								The ability to use a smartphone, tablet, or computer to
+								access your account means your files follow you
+								everywhere.
+							</p>
+						</div>
+						<div class="">
+							<div class="">
+								<img src="./assets/images/icon-security.svg" alt="" />
+							</div>
+							<h2 class="">Security you can trust</h2>
+							<p class="">
+								2-factor authentication and user-controlled encryption
+								are just a couple of the security features we allow to
+								help secure your files.
+							</p>
+						</div>
+					</div>
+					<div class="">
+						<div class="">
+							<div class="">
+								<img
+									src="./assets/images/icon-collaboration.svg"
+									alt=""
+								/>
+							</div>
+							<h2 class="">Real-time collaboration</h2>
+							<p class="">
+								Securely share files and folders with friends, family
+								and colleagues for live collaboration. No email
+								attachments required.
+							</p>
+						</div>
+						<div class="">
+							<div class="">
+								<img src="./assets/images/icon-any-file.svg" alt="" />
+							</div>
+							<h2 class="">Store any type of file</h2>
+							<p class="">
+								Whether you're sharing holidays photos or work
+								documents, Fylo has you covered allowing for all file
+								types to be securely stored and shared.
+							</p>
+						</div>
+					</div>
+				</div>
+				<div class="MainBox">
+					<div class="">
+						<img
+							src="./assets/images/illustration-stay-productive.png"
+							alt=""
+						/>
+					</div>
+					<div class="">
+						<h3 class="">Stay productive, wherever you are</h3>
+						<p class="">
+							Never let location be an issue when accessing your files.
+							Fylo has you covered for all of your file storage needs.
+						</p>
+						<p class="">
+							Securely share files and folders with friends, family and
+							colleagues for live collaboration. No email attachments
+							required.
+						</p>
+						<p class="">
+							See how Fylo works
+							<img src="./assets/images/icon-arrow.svg" alt="" />
+						</p>
+					</div>
+				</div>
+				<div class="MainBox">
+					<div class="class">
+						<p class="">
+							Fylo has improved our team productivity by an order of
+							magnitude. Since making the switch our team has become a
+							well-oiled collaboration machine.
+						</p>
+						<div class="">
+							<div class=""><img src="." alt="" /></div>
+							<div class="">
+								<p class="">Satish Patel</p>
+								<p class="">Founder & CEO, Huddle</p>
+							</div>
+						</div>
+					</div>
+					<div class="class">
+						<p class="">
+							Fylo has improved our team productivity by an order of
+							magnitude. Since making the switch our team has become a
+							well-oiled collaboration machine.
+						</p>
+						<div class="">
+							<div class=""><img src="." alt="" /></div>
+							<div class="">
+								<p class="">Bruce McKenzie</p>
+								<p class="">Founder & CEO, Huddle</p>
+							</div>
+						</div>
+					</div>
+					<div class="class">
+						<p class="">
+							Fylo has improved our team productivity by an order of
+							magnitude. Since making the switch our team has become a
+							well-oiled collaboration machine.
+						</p>
+						<div class="">
+							<div class=""><img src="." alt="" /></div>
+							<div class="">
+								<p class="">Iva Boyd</p>
+								<p class="">Founder & CEO, Huddle</p>
+							</div>
+						</div>
+					</div>
+				</div>
+				<div class="MainBox">
+					<h4 class="">Get early access today</h4>
+					<p class="">
+						It only takes a minute to sign up and our free starter tier is
+						extremely generous. If you have any questions, our support
+						team would be happy to help you.
+					</p>
+					<div class="">
+						<input
+							type="text"
+							name=""
+							id="email_id"
+							placeholder="example@email.com"
+						/>
+						<button class="">Get Started For Free</button>
+					</div>
+				</div>
 			</main>
 			<footer id="footer">
 				<div class="FooterBox">
