refactor: format code

--- a/index.html
+++ b/index.html
@@ -18,222 +18,218 @@
 		<script src="assets/scripts/app.js" defer></script>
 		<link type="text/css" rel="stylesheet" href="/assets/style/style.css" />
 	</head>
-	<body>
-		<div id="page_container">
-			<header id="header">
-				<div class="logo">
-					<img src="./assets/images/logo.svg" alt="Fylo Logo" />
-				</div>
-				<nav id="nav">
-					<div class="NavBox"><p class="">Features</p></div>
-					<div class="NavBox"><p class="">Team</p></div>
-					<div class="NavBox"><p class="">Sign In</p></div>
-				</nav>
-			</header>
-			<main id="main">
-				<div class="MainBox">
-					<img src="./assets/images/illustration-intro.png" alt="" />
-				</div>
-				<div class="MainBox">
-					<h1 id="header_1">
-						All your files in one secure location, accessible anywhere
-					</h1>
-					<p class="">
-						Fylo stores all your most important files in one secure
-						location. Access them wherever you need, share and collaborate
-						with friends family, and co-workers.
-					</p>
-					<button class="">Get Started</button>
-				</div>
-				<div class="MainBox">
+	<body id="page_container">
+		<header id="header">
+			<div class="logo">
+				<img src="./assets/images/logo.svg" alt="Fylo Logo" />
+			</div>
+			<nav id="nav">
+				<div class="NavBox"><p class="">Features</p></div>
+				<div class="NavBox"><p class="">Team</p></div>
+				<div class="NavBox"><p class="">Sign In</p></div>
+			</nav>
+		</header>
+		<main id="main">
+			<div class="MainBox">
+				<img src="./assets/images/illustration-intro.png" alt="" />
+			</div>
+			<div class="MainBox">
+				<h1 id="header_1">
+					All your files in one secure location, accessible anywhere
+				</h1>
+				<p class="">
+					Fylo stores all your most important files in one secure location.
+					Access them wherever you need, share and collaborate with friends
+					family, and co-workers.
+				</p>
+				<button class="">Get Started</button>
+			</div>
+			<div class="MainBox">
+				<div class="">
 					<div class="">
 						<div class="">
-							<div class="">
-								<img
-									src="./assets/images/icon-access-anywhere.svg"
-									alt=""
-								/>
-							</div>
-							<h2 class="">Access your files, anywhere</h2>
-							<p class="">
-								The ability to use a smartphone, tablet, or computer to
-								access your account means your files follow you
-								everywhere.
-							</p>
+							<img
+								src="./assets/images/icon-access-anywhere.svg"
+								alt=""
+							/>
 						</div>
-						<div class="">
-							<div class="">
-								<img src="./assets/images/icon-security.svg" alt="" />
-							</div>
-							<h2 class="">Security you can trust</h2>
-							<p class="">
-								2-factor authentication and user-controlled encryption
-								are just a couple of the security features we allow to
-								help secure your files.
-							</p>
-						</div>
-					</div>
-					<div class="">
-						<div class="">
-							<div class="">
-								<img
-									src="./assets/images/icon-collaboration.svg"
-									alt=""
-								/>
-							</div>
-							<h2 class="">Real-time collaboration</h2>
-							<p class="">
-								Securely share files and folders with friends, family
-								and colleagues for live collaboration. No email
-								attachments required.
-							</p>
-						</div>
-						<div class="">
-							<div class="">
-								<img src="./assets/images/icon-any-file.svg" alt="" />
-							</div>
-							<h2 class="">Store any type of file</h2>
-							<p class="">
-								Whether you're sharing holidays photos or work
-								documents, Fylo has you covered allowing for all file
-								types to be securely stored and shared.
-							</p>
-						</div>
-					</div>
-				</div>
-				<div class="MainBox">
-					<div class="">
-						<img
-							src="./assets/images/illustration-stay-productive.png"
-							alt=""
-						/>
-					</div>
-					<div class="">
-						<h3 class="">Stay productive, wherever you are</h3>
+						<h2 class="">Access your files, anywhere</h2>
 						<p class="">
-							Never let location be an issue when accessing your files.
-							Fylo has you covered for all of your file storage needs.
+							The ability to use a smartphone, tablet, or computer to
+							access your account means your files follow you everywhere.
 						</p>
+					</div>
+					<div class="">
+						<div class="">
+							<img src="./assets/images/icon-security.svg" alt="" />
+						</div>
+						<h2 class="">Security you can trust</h2>
+						<p class="">
+							2-factor authentication and user-controlled encryption are
+							just a couple of the security features we allow to help
+							secure your files.
+						</p>
+					</div>
+				</div>
+				<div class="">
+					<div class="">
+						<div class="">
+							<img src="./assets/images/icon-collaboration.svg" alt="" />
+						</div>
+						<h2 class="">Real-time collaboration</h2>
 						<p class="">
 							Securely share files and folders with friends, family and
 							colleagues for live collaboration. No email attachments
 							required.
 						</p>
+					</div>
+					<div class="">
+						<div class="">
+							<img src="./assets/images/icon-any-file.svg" alt="" />
+						</div>
+						<h2 class="">Store any type of file</h2>
 						<p class="">
-							See how Fylo works
-							<img src="./assets/images/icon-arrow.svg" alt="" />
+							Whether you're sharing holidays photos or work documents,
+							Fylo has you covered allowing for all file types to be
+							securely stored and shared.
 						</p>
 					</div>
 				</div>
-				<div class="MainBox">
-					<div class="class">
-						<p class="">
-							Fylo has improved our team productivity by an order of
-							magnitude. Since making the switch our team has become a
-							well-oiled collaboration machine.
-						</p>
-						<div class="">
-							<div class=""><img src="." alt="" /></div>
-							<div class="">
-								<p class="">Satish Patel</p>
-								<p class="">Founder & CEO, Huddle</p>
-							</div>
-						</div>
-					</div>
-					<div class="class">
-						<p class="">
-							Fylo has improved our team productivity by an order of
-							magnitude. Since making the switch our team has become a
-							well-oiled collaboration machine.
-						</p>
-						<div class="">
-							<div class=""><img src="." alt="" /></div>
-							<div class="">
-								<p class="">Bruce McKenzie</p>
-								<p class="">Founder & CEO, Huddle</p>
-							</div>
-						</div>
-					</div>
-					<div class="class">
-						<p class="">
-							Fylo has improved our team productivity by an order of
-							magnitude. Since making the switch our team has become a
-							well-oiled collaboration machine.
-						</p>
-						<div class="">
-							<div class=""><img src="." alt="" /></div>
-							<div class="">
-								<p class="">Iva Boyd</p>
-								<p class="">Founder & CEO, Huddle</p>
-							</div>
-						</div>
-					</div>
+			</div>
+			<div class="MainBox">
+				<div class="">
+					<img
+						src="./assets/images/illustration-stay-productive.png"
+						alt=""
+					/>
 				</div>
-				<div class="MainBox">
-					<h4 class="">Get early access today</h4>
+				<div class="">
+					<h3 class="">Stay productive, wherever you are</h3>
 					<p class="">
-						It only takes a minute to sign up and our free starter tier is
-						extremely generous. If you have any questions, our support
-						team would be happy to help you.
+						Never let location be an issue when accessing your files. Fylo
+						has you covered for all of your file storage needs.
+					</p>
+					<p class="">
+						Securely share files and folders with friends, family and
+						colleagues for live collaboration. No email attachments
+						required.
+					</p>
+					<p class="">
+						See how Fylo works
+						<img src="./assets/images/icon-arrow.svg" alt="" />
+					</p>
+				</div>
+			</div>
+			<div class="MainBox">
+				<div class="class">
+					<p class="">
+						Fylo has improved our team productivity by an order of
+						magnitude. Since making the switch our team has become a
+						well-oiled collaboration machine.
 					</p>
 					<div class="">
-						<input
-							type="text"
-							name=""
-							id="email_id"
-							placeholder="example@email.com"
-						/>
-						<button class="">Get Started For Free</button>
+						<div class=""><img src="." alt="" /></div>
+						<div class="">
+							<p class="">Satish Patel</p>
+							<p class="">Founder & CEO, Huddle</p>
+						</div>
 					</div>
 				</div>
-			</main>
-			<footer id="footer">
-				<div class="FooterBox">
-					<img src="./assets/images/logo.svg" alt="" />
+				<div class="class">
+					<p class="">
+						Fylo has improved our team productivity by an order of
+						magnitude. Since making the switch our team has become a
+						well-oiled collaboration machine.
+					</p>
+					<div class="">
+						<div class=""><img src="." alt="" /></div>
+						<div class="">
+							<p class="">Bruce McKenzie</p>
+							<p class="">Founder & CEO, Huddle</p>
+						</div>
+					</div>
 				</div>
-				<div class="FooterBox">
+				<div class="class">
+					<p class="">
+						Fylo has improved our team productivity by an order of
+						magnitude. Since making the switch our team has become a
+						well-oiled collaboration machine.
+					</p>
 					<div class="">
-						<img src="./assets/images/icon-location.svg" alt="" />
-						<p class="">
-							Lorem ipsum dolor sit amet, consectetur adipiscing elit,
-							sed do eiusmod tempor incididunt ut labore et dolore magna
-							aliqua 6
-						</p>
+						<div class=""><img src="." alt="" /></div>
+						<div class="">
+							<p class="">Iva Boyd</p>
+							<p class="">Founder & CEO, Huddle</p>
+						</div>
 					</div>
-					<div class="">
-						<p class="">
-							<img
-								src="./assets/images/icon-phone.svg"
-								alt=""
-							/>+1-543-123-4567
-						</p>
-						<p class="">
-							<img src="./assets/images/icon-email.svg" alt="" />
-							example@fylo.com
-						</p>
-					</div>
-					<div class="">
-						<p class="">About Us</p>
-						<p class="">jobs</p>
-						<p class="">Press</p>
-						<p class="">Blog</p>
-					</div>
-					<div class="">
-						<p class="">Contact Us</p>
-						<p class="">Terms</p>
-						<p class="">Privacy</p>
-					</div>
-					<div class=""><img src="" alt=""><img src="" alt=""><img src="" alt=""></div>
 				</div>
-				<p class="attribution">
-					Challenge by
-					<a
-						href="https://www.frontendmentor.io?ref=challenge"
-						target="_blank"
-						>Frontend Mentor</a
-					>. Coded by <a href="#">Babboe1</a>.
+			</div>
+			<div class="MainBox">
+				<h4 class="">Get early access today</h4>
+				<p class="">
+					It only takes a minute to sign up and our free starter tier is
+					extremely generous. If you have any questions, our support team
+					would be happy to help you.
 				</p>
-			</footer>
-		</div>
+				<div class="">
+					<input
+						type="text"
+						name=""
+						id="email_id"
+						placeholder="example@email.com"
+					/>
+					<button class="">Get Started For Free</button>
+				</div>
+			</div>
+		</main>
+		<footer id="footer">
+			<div class="FooterBox">
+				<img src="./assets/images/logo.svg" alt="" />
+			</div>
+			<div class="FooterBox">
+				<div class="">
+					<img src="./assets/images/icon-location.svg" alt="" />
+					<p class="">
+						Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed
+						do eiusmod tempor incididunt ut labore et dolore magna aliqua
+						6
+					</p>
+				</div>
+				<div class="">
+					<p class="">
+						<img
+							src="./assets/images/icon-phone.svg"
+							alt=""
+						/>+1-543-123-4567
+					</p>
+					<p class="">
+						<img src="./assets/images/icon-email.svg" alt="" />
+						example@fylo.com
+					</p>
+				</div>
+				<div class="">
+					<p class="">About Us</p>
+					<p class="">jobs</p>
+					<p class="">Press</p>
+					<p class="">Blog</p>
+				</div>
+				<div class="">
+					<p class="">Contact Us</p>
+					<p class="">Terms</p>
+					<p class="">Privacy</p>
+				</div>
+				<div class="">
+					<img src="" alt="" /><img src="" alt="" /><img src="" alt="" />
+				</div>
+			</div>
+			<p class="attribution">
+				Challenge by
+				<a
+					href="https://www.frontendmentor.io?ref=challenge"
+					target="_blank"
+					>Frontend Mentor</a
+				>. Coded by <a href="#">Babboe1</a>.
+			</p>
+		</footer>
 	</body>
 </html>
