refactor: update source

--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
 			Frontend Mentor | Fylo landing page with dark theme and features grid
 		</title>
 
-		<script src="assets/scripts/app.js" defer></script>
-		<link type="text/css" rel="stylesheet" href="/assets/style/style.css" />
+		<script src="./assets/scripts/app.js" defer></script>
+		<link type="text/css" rel="stylesheet" href="./assets/style/style.css" />
 	</head>
 	<body id="page_container">
 		<header id="header">
