--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 		<script src="./assets/scripts/app.js" defer></script>
 		<link type="text/css" rel="stylesheet" href="./assets/style/style.css" />
 	</head>
-	<body id="page_container">
+	<body id="body_container">
 		<header id="header">
 			<div class="logo">
 				<img src="./assets/images/logo.svg" alt="Fylo Logo" />
