refactor: format code

--- a/index.html
+++ b/index.html
@@ -20,8 +20,12 @@
 	</head>
 	<body id="body_container">
 		<header id="header">
-			<div class="logo">
-				<img src="./assets/images/logo.svg" alt="Fylo Logo" />
+			<div class="Logo">
+				<img
+					src="./assets/images/logo.svg"
+					alt="Fylo Logo"
+					class="ImageSize"
+				/>
 			</div>
 			<nav id="nav">
 				<div class="NavBox"><p class="">Features</p></div>
