refactor: format code

--- a/index.html
+++ b/index.html
@@ -34,8 +34,12 @@
 			</nav>
 		</header>
 		<main id="main">
-			<div class="MainBox">
-				<img src="./assets/images/illustration-intro.png" alt="" />
+			<div class="Bg-Img">
+				<img
+					src="./assets/images/illustration-intro.png"
+					alt=""
+					class="ImageSize"
+				/>
 			</div>
 			<div class="MainBox">
 				<h1 id="header_1">
