refactor: add class name

--- a/index.html
+++ b/index.html
@@ -41,6 +41,7 @@
 					class="ImageSize"
 				/>
 			</div>
+			<div class="ContentMain BgMain">
 			<div class="MainBox">
 				<h1 id="header_1">
 					All your files in one secure location, accessible anywhere
