refactor: create parent element

--- a/index.html
+++ b/index.html
@@ -188,6 +188,7 @@
 						placeholder="example@email.com"
 					/>
 					<button class="">Get Started For Free</button>
+					</div>
 				</div>
 			</div>
 		</main>
