--- a/index.html
+++ b/index.html
@@ -177,17 +177,17 @@
 				<h4 class="">Get early access today</h4>
 				<p class="">
 					It only takes a minute to sign up and our free starter tier is
-					extremely generous. If you have any questions, our support team
-					would be happy to help you.
-				</p>
-				<div class="">
-					<input
-						type="text"
-						name=""
-						id="email_id"
-						placeholder="example@email.com"
-					/>
-					<button class="">Get Started For Free</button>
+						extremely generous. If you have any questions, our support
+						team would be happy to help you.
+					</p>
+					<div class="">
+						<input
+							type="text"
+							name=""
+							id="email_id"
+							placeholder="example@email.com"
+						/>
+						<button class="">Get Started For Free</button>
 					</div>
 				</div>
 			</div>
