refactor: format code

--- a/index.html
+++ b/index.html
@@ -115,68 +115,68 @@
 				<div class="">
 					<h3 class="">Stay productive, wherever you are</h3>
 					<p class="">
-						Never let location be an issue when accessing your files. Fylo
-						has you covered for all of your file storage needs.
-					</p>
-					<p class="">
-						Securely share files and folders with friends, family and
-						colleagues for live collaboration. No email attachments
-						required.
-					</p>
-					<p class="">
-						See how Fylo works
-						<img src="./assets/images/icon-arrow.svg" alt="" />
-					</p>
+							Never let location be an issue when accessing your files.
+							Fylo has you covered for all of your file storage needs.
+						</p>
+						<p class="">
+							Securely share files and folders with friends, family and
+							colleagues for live collaboration. No email attachments
+							required.
+						</p>
+						<p class="">
+							See how Fylo works
+							<img src="./assets/images/icon-arrow.svg" alt="" />
+						</p>
+					</div>
 				</div>
-			</div>
-			<div class="MainBox">
-				<div class="class">
-					<p class="">
-						Fylo has improved our team productivity by an order of
-						magnitude. Since making the switch our team has become a
-						well-oiled collaboration machine.
-					</p>
-					<div class="">
-						<div class=""><img src="." alt="" /></div>
+				<div class="MainBox">
+					<div class="class">
+						<p class="">
+							Fylo has improved our team productivity by an order of
+							magnitude. Since making the switch our team has become a
+							well-oiled collaboration machine.
+						</p>
 						<div class="">
-							<p class="">Satish Patel</p>
-							<p class="">Founder & CEO, Huddle</p>
+							<div class=""><img src="." alt="" /></div>
+							<div class="">
+								<p class="">Satish Patel</p>
+								<p class="">Founder & CEO, Huddle</p>
+							</div>
+						</div>
+					</div>
+					<div class="class">
+						<p class="">
+							Fylo has improved our team productivity by an order of
+							magnitude. Since making the switch our team has become a
+							well-oiled collaboration machine.
+						</p>
+						<div class="">
+							<div class=""><img src="." alt="" /></div>
+							<div class="">
+								<p class="">Bruce McKenzie</p>
+								<p class="">Founder & CEO, Huddle</p>
+							</div>
+						</div>
+					</div>
+					<div class="class">
+						<p class="">
+							Fylo has improved our team productivity by an order of
+							magnitude. Since making the switch our team has become a
+							well-oiled collaboration machine.
+						</p>
+						<div class="">
+							<div class=""><img src="." alt="" /></div>
+							<div class="">
+								<p class="">Iva Boyd</p>
+								<p class="">Founder & CEO, Huddle</p>
+							</div>
 						</div>
 					</div>
 				</div>
-				<div class="class">
+				<div class="MainBox">
+					<h4 class="">Get early access today</h4>
 					<p class="">
-						Fylo has improved our team productivity by an order of
-						magnitude. Since making the switch our team has become a
-						well-oiled collaboration machine.
-					</p>
-					<div class="">
-						<div class=""><img src="." alt="" /></div>
-						<div class="">
-							<p class="">Bruce McKenzie</p>
-							<p class="">Founder & CEO, Huddle</p>
-						</div>
-					</div>
-				</div>
-				<div class="class">
-					<p class="">
-						Fylo has improved our team productivity by an order of
-						magnitude. Since making the switch our team has become a
-						well-oiled collaboration machine.
-					</p>
-					<div class="">
-						<div class=""><img src="." alt="" /></div>
-						<div class="">
-							<p class="">Iva Boyd</p>
-							<p class="">Founder & CEO, Huddle</p>
-						</div>
-					</div>
-				</div>
-			</div>
-			<div class="MainBox">
-				<h4 class="">Get early access today</h4>
-				<p class="">
-					It only takes a minute to sign up and our free starter tier is
+						It only takes a minute to sign up and our free starter tier is
 						extremely generous. If you have any questions, our support
 						team would be happy to help you.
 					</p>
