--- a/index.html
+++ b/index.html
@@ -109,12 +109,12 @@
 				<div class="">
 					<img
 						src="./assets/images/illustration-stay-productive.png"
-						alt=""
-					/>
-				</div>
-				<div class="">
-					<h3 class="">Stay productive, wherever you are</h3>
-					<p class="">
+							alt="" class="ImageSize"
+						/>
+					</div>
+					<div class="">
+						<h3 class="">Stay productive, wherever you are</h3>
+						<p class="">
 							Never let location be an issue when accessing your files.
 							Fylo has you covered for all of your file storage needs.
 						</p>
