refactor: format code

--- a/index.html
+++ b/index.html
@@ -98,17 +98,17 @@
 						</div>
 						<h2 class="">Store any type of file</h2>
 						<p class="">
-							Whether you're sharing holidays photos or work documents,
-							Fylo has you covered allowing for all file types to be
-							securely stored and shared.
-						</p>
+								Whether you're sharing holidays photos or work
+								documents, Fylo has you covered allowing for all file
+								types to be securely stored and shared.
+							</p>
+						</div>
 					</div>
 				</div>
-			</div>
-			<div class="MainBox">
-				<div class="">
-					<img
-						src="./assets/images/illustration-stay-productive.png"
+				<div class="MainBox">
+					<div class="">
+						<img
+							src="./assets/images/illustration-stay-productive.png"
 							alt="" class="ImageSize"
 						/>
 					</div>
