refactor: format code

--- a/index.html
+++ b/index.html
@@ -87,17 +87,17 @@
 						</div>
 						<h2 class="">Real-time collaboration</h2>
 						<p class="">
-							Securely share files and folders with friends, family and
-							colleagues for live collaboration. No email attachments
-							required.
-						</p>
-					</div>
-					<div class="">
-						<div class="">
-							<img src="./assets/images/icon-any-file.svg" alt="" />
+								Securely share files and folders with friends, family
+								and colleagues for live collaboration. No email
+								attachments required.
+							</p>
 						</div>
-						<h2 class="">Store any type of file</h2>
-						<p class="">
+						<div class="">
+							<div class="">
+								<img src="./assets/images/icon-any-file.svg" alt="" />
+							</div>
+							<h2 class="">Store any type of file</h2>
+							<p class="">
 								Whether you're sharing holidays photos or work
 								documents, Fylo has you covered allowing for all file
 								types to be securely stored and shared.
