refactor: format code

--- a/index.html
+++ b/index.html
@@ -74,15 +74,15 @@
 						</div>
 						<h2 class="">Security you can trust</h2>
 						<p class="">
-							2-factor authentication and user-controlled encryption are
-							just a couple of the security features we allow to help
-							secure your files.
-						</p>
+								2-factor authentication and user-controlled encryption
+								are just a couple of the security features we allow to
+								help secure your files.
+							</p>
+						</div>
 					</div>
-				</div>
-				<div class="">
 					<div class="">
 						<div class="">
+							<div class="">
 							<img src="./assets/images/icon-collaboration.svg" alt="" />
 						</div>
 						<h2 class="">Real-time collaboration</h2>
