refactor: format code

--- a/index.html
+++ b/index.html
@@ -83,10 +83,13 @@
 					<div class="">
 						<div class="">
 							<div class="">
-							<img src="./assets/images/icon-collaboration.svg" alt="" />
-						</div>
-						<h2 class="">Real-time collaboration</h2>
-						<p class="">
+								<img
+									src="./assets/images/icon-collaboration.svg"
+									alt=""
+								/>
+							</div>
+							<h2 class="">Real-time collaboration</h2>
+							<p class="">
 								Securely share files and folders with friends, family
 								and colleagues for live collaboration. No email
 								attachments required.
