refactor: edit doc src

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 			Frontend Mentor | Fylo landing page with dark theme and features grid
 		</title>
 
-		<script src="./assets/scripts/app.js" defer></script>
+		<script src="./assets/script/app.js" defer></script>
 		<link type="text/css" rel="stylesheet" href="./assets/style/style.css" />
 	</head>
 	<body id="body_container">
