refactor: update code

--- a/index.html
+++ b/index.html
@@ -55,10 +55,10 @@
 			</div>
 			<div class="MainBox">
 				<div class="">
-					<div class="">
-						<div class="">
-							<img
-								src="./assets/images/icon-access-anywhere.svg"
+						<div class="MainItem">
+							<div class="">
+								<img
+									src="./assets/images/icon-access-anywhere.svg"
 								alt=""
 							/>
 						</div>
