refactor: update code

--- a/index.html
+++ b/index.html
@@ -46,11 +46,11 @@
 				<h1 id="header_1">
 					All your files in one secure location, accessible anywhere
 				</h1>
-				<p class="">
-					Fylo stores all your most important files in one secure location.
-					Access them wherever you need, share and collaborate with friends
-					family, and co-workers.
-				</p>
+					<p class="TextMain">
+						Fylo stores all your most important files in one secure
+						location. Access them wherever you need, share and collaborate
+						with friends family, and co-workers.
+					</p>
 				<button class="">Get Started</button>
 			</div>
 			<div class="MainBox">
