refactor: update code

--- a/index.html
+++ b/index.html
@@ -51,10 +51,12 @@
 						location. Access them wherever you need, share and collaborate
 						with friends family, and co-workers.
 					</p>
-				<button class="">Get Started</button>
-			</div>
-			<div class="MainBox">
-				<div class="">
+					<div class="button">
+                  <button class="ActionBtn" >Get Started</button>
+               </div>
+				</div>
+				<div class="MainBox">
+					<div class="">
 						<div class="MainItem">
 							<div class="">
 								<img
