refactor: update code

--- a/index.html
+++ b/index.html
@@ -67,9 +67,10 @@
 						<h2 class="">Access your files, anywhere</h2>
 						<p class="">
 							The ability to use a smartphone, tablet, or computer to
-							access your account means your files follow you everywhere.
-						</p>
-					</div>
+								access your account means your files follow you
+								everywhere.
+							</p>
+						</div>
 					<div class="">
 						<div class="">
 							<img src="./assets/images/icon-security.svg" alt="" />
