refactor: update code

--- a/index.html
+++ b/index.html
@@ -61,10 +61,10 @@
 							<div class="">
 								<img
 									src="./assets/images/icon-access-anywhere.svg"
-								alt=""
-							/>
-						</div>
-						<h2 class="">Access your files, anywhere</h2>
+									alt="" class="ItemImg"
+								/>
+							</div>
+							<h2 class="">Access your files, anywhere</h2>
 						<p class="">
 							The ability to use a smartphone, tablet, or computer to
 								access your account means your files follow you
