refactor: update code

--- a/index.html
+++ b/index.html
@@ -65,8 +65,8 @@
 								/>
 							</div>
 							<h2 class="">Access your files, anywhere</h2>
-						<p class="">
-							The ability to use a smartphone, tablet, or computer to
+							<p class="TextMain">
+								The ability to use a smartphone, tablet, or computer to
 								access your account means your files follow you
 								everywhere.
 							</p>
