--- a/index.html
+++ b/index.html
@@ -71,6 +71,7 @@
 								everywhere.
 							</p>
 						</div>
+						<div class="MainItem">
 					<div class="">
 						<div class="">
 							<img src="./assets/images/icon-security.svg" alt="" />
