refactor: update code

--- a/index.html
+++ b/index.html
@@ -73,10 +73,9 @@
 						</div>
 						<div class="MainItem">
 					<div class="">
-						<div class="">
-							<img src="./assets/images/icon-security.svg" alt="" />
-						</div>
-						<h2 class="">Security you can trust</h2>
+								<img src="./assets/images/icon-security.svg" alt="" class="ItemImg"/>
+							</div>
+							<h2 class="">Security you can trust</h2>
 						<p class="">
 								2-factor authentication and user-controlled encryption
 								are just a couple of the security features we allow to
