refactor: update code

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 				<div class="MainBox">
 					<div >
 						<div class="MainItem">
-							<div class="">
+							<div >
 								<img
 									src="./assets/images/icon-access-anywhere.svg"
 									alt="" class="ItemImg"
