refactor: update code

--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
 									alt="" class="ItemImg"
 								/>
 							</div>
-							<h2 class="">Access your files, anywhere</h2>
+							<h2 >Access your files, anywhere</h2>
 							<p class="TextMain">
 								The ability to use a smartphone, tablet, or computer to
 								access your account means your files follow you
