refactor: update code

--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
 							<div >
 								<img src="./assets/images/icon-security.svg" alt="" class="ItemImg"/>
 							</div>
-							<h2 class="">Security you can trust</h2>
+							<h2 >Security you can trust</h2>
 							<p class="TextMain">
 								2-factor authentication and user-controlled encryption
 								are just a couple of the security features we allow to
