--- a/index.html
+++ b/index.html
@@ -83,9 +83,9 @@
 							</p>
 						</div>
 					</div>
-					<div class="">
-						<div class="">
-							<div class="">
+					<div >
+						<div class="MainItem">
+							<div >
 								<img
 									src="./assets/images/icon-collaboration.svg"
 									alt=""
