--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
 							<div >
 								<img
 									src="./assets/images/icon-collaboration.svg"
-									alt=""
+									alt="" class="ItemImg1"
 								/>
 							</div>
 							<h2 class="">Real-time collaboration</h2>
