refactor: update code

--- a/index.html
+++ b/index.html
@@ -91,8 +91,8 @@
 									alt="" class="ItemImg1"
 								/>
 							</div>
-							<h2 class="">Real-time collaboration</h2>
-							<p class="">
+							<h2 >Real-time collaboration</h2>
+							<p class="TextMain">
 								Securely share files and folders with friends, family
 								and colleagues for live collaboration. No email
 								attachments required.
