--- a/index.html
+++ b/index.html
@@ -102,8 +102,8 @@
 							<div class="">
 								<img src="./assets/images/icon-any-file.svg" alt="" />
 							</div>
-							<h2 class="">Store any type of file</h2>
-							<p class="">
+							<h2 >Store any type of file</h2>
+							<p class="TextMain">
 								Whether you're sharing holidays photos or work
 								documents, Fylo has you covered allowing for all file
 								types to be securely stored and shared.
